# RayTracingInOneWeekend

./: .gitignore  CMakeLists.txt
Result/: Image12.ppm  Image14.ppm
src/InOneWeekend/: camera.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
